# GalaxianMatch

./: .gitignore  CMakeLists.txt  README.md  build.gradle.kts  settings.gradle.kts
.github/workflows/: cmake-multi-platform.yml
app/: CMakeLists.txt  build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/Source/: DefsCore.h  DefsGame.h  DefsJNI.cpp  DefsJNI.h  DefsMove.h  Game.cpp  Game.h  GameAttributes.cpp  GameAttributes.h  GameCommands.cpp  GameCommands.h  GameEvents.cpp  GameEvents.h  GameHelpers.cpp  GameHelpers.h  GameLibrary.cpp  GameLibrary.h  GameOptions.h  GameRand.cpp  GameRand.h  GameStateManager.cpp  GameStateManager.h  GameStatics.cpp  GameStatics.h  GameTest.cpp  GameTest.h  GameUI.cpp  GameUI.h
app/src/main/cpp/Source/Components/: SceneAnimation2D.cpp  SceneAnimation2D.h  SplinePath2D.cpp  SplinePath2D.h
app/src/main/cpp/Source/GraphicEffects/: SplashScreen.cpp  SplashScreen.h
app/src/main/cpp/Source/Managers/: MAN_Matches.cpp  MAN_Matches.h  Matches.cpp  Matches.h  Tutorial.cpp  Tutorial.h
app/src/main/cpp/Source/Network/: Network.cpp  Network.h  NetworkConnection.cpp  NetworkConnection.h  NetworkTransport.cpp  NetworkTransport.h
app/src/main/cpp/Source/Objects/: AnimatedSprite.cpp  AnimatedSprite.h  BlastLogic.cpp  BlastLogic.h  BossLogic.cpp  BossLogic.h  DelayAction.cpp  DelayAction.h  TicTacToeLogic.cpp  TicTacToeLogic.h
app/src/main/cpp/Source/ObjectsCore/: DelayInformer.cpp  DelayInformer.h  EnumList.hpp  InteractiveFrame.cpp  InteractiveFrame.h  MemoryObjects.cpp  MemoryObjects.h  ObjectPool.cpp  ObjectPool.h  Pool.h  TextMessage.cpp  TextMessage.h  TimerRemover.cpp  TimerRemover.h  TimerSimple.cpp  TimerSimple.h
app/src/main/cpp/Source/Resources/: LevelGraph.cpp  LevelGraph.h
app/src/main/cpp/Source/States/: sCinematic.cpp  sCinematic.h  sLevelMap.cpp  sLevelMap.h  sMainMenu.cpp  sMainMenu.h  sOptions.cpp  sOptions.h  sPlay.cpp  sPlay.h  sSplash.cpp  sSplash.h
app/src/main/res/layout/: activity_main.xml  dialog_ad.xml
app/src/main/res/values/: strings.xml  styles.xml
cmake/: UrhoPatcher.cmake
cmake/Modules/: UrhoCommon.cmake
exe/server/: server.js
script/: cmake_clean.bat  cmake_codeblocks.bat  cmake_codelite.bat  cmake_emscripten.bat  cmake_emscripten.sh  cmake_generic.bat  cmake_mingw.bat  cmake_ninja.bat  cmake_vs.bat  cmake_vs2015.bat  cmake_vs2017.bat  cmake_vs2019.bat  cmake_vs2022.bat
